--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -14,6 +14,9 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "^4.1.7",
+    "@tensorflow-models/pose-detection": "^2.1.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "framer-motion": "^11.18.2",
     "lucide": "^0.511.0",
     "lucide-react": "^0.511.0",
